--- a/web dev:design projects/stuff/ccs project/index.html
+++ b/web dev:design projects/stuff/ccs project/index.html
@@ -8,20 +8,20 @@
     
     <body>
         <div id="header">
-            <h1 class="name-title">Simple Blog</h1>
+            <h1 class="name-title">Simple Blog Template</h1>
         </div>
         
         <div id="wrapper">
             <div class="blog-section">
                 <h1>Post &#35;2</h1>
-                <h3>Posted on <time>17/03/2016</time></h3>
+                <h3>Posted on <time>22/09/2018</time></h3>
                 <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <br><br>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Duis mollis, est non commodo luctus.</p>
                 <span class="tags"><p><strong>Tags:</strong><a href="#">Lorem Ipsum</a></p></span>
             </div>
 
             <div class="blog-section">
                 <h1>Post &#35;2</h1>
-                <h3>Posted on <time>17/03/2016</time></h3>
+                <h3>Posted on <time>20/00/2018</time></h3>
                 <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <br><br>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Duis mollis, est non commodo luctus.</p>
                 <span class="tags"><p><strong>Tags:</strong><a href="#">Lorem Ipsum</a></p></span>
             </div>
